--- a/A_B_Test.ipynb
+++ b/A_B_Test.ipynb
@@ -132,7 +132,7 @@
         "outputId": "35a462dc-e421-4d6c-e716-391a11eb3d57"
       },
       "source": [
-        "# Calculating effect size based on our expected rates (current conversion rate is %12. we will be expecting if it goes 15%.)\n",
+        "# Calculating effect size based on our expected rates (current conversion rate is %12. we will be expecting this to be 15%.)\n",
         "effect_size = sms.proportion_effectsize(0.13, 0.15)\n",
         "print(effect_size)\n",
         "# Calculating sample size needed  \n",
